--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+html, body, #home {
+	height: 100%;
+	overflow-x: hidden;
+}
+
+body{
+	font-family: Arial, Helvetica, sans-serif,sans-serif;
+    font-size: 10em;
+}
+
 .navbar-light .navbar-nav .nav-link{
 	color: white;
 }
