--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-html, body, #home {
-	height: 100%;
-	overflow-x: hidden;
-}
 
 body{
 	font-family: Arial, Helvetica, sans-serif,sans-serif;
@@ -9,7 +5,7 @@ body{
 }
 
 .navbar-light .navbar-nav .nav-link{
-	color: white;
+	color: #fff;
 }
 
 .navbar-light .navbar-nav .nav-link:hover{
