--- a/assets/styles.css
+++ b/assets/styles.css
@@ -100,11 +100,13 @@ footer {
 }
 
 .left-content > h1 {
-	margin-left: 0px;
+	text-align: center;
 }
 
 .left-content > p {
 	color: white;
+	font-size: 13px;
+	text-align: center;
 }
 
 .all-rights {
@@ -123,51 +125,10 @@ footer {
 
 .left-content {
 	display: flex;
-	justify-content: flex-start;
+	justify-content: center;
 }
 
-/* Extra small devices (portrait phones, less than 576px)*/
-@media (max-width: 575.98px) {
-	.btn-custom {
-		margin: 10px 15px;
-		font-size: 1em;
-	}
-	.google-maps {
-		height: 50%;
-    	width: 50%;
-	}
-} 
-
-/* Small devices (landscape phones, 576px and up)*/
-@media (min-width: 576px) and (max-width: 767.98px) { 
-	h1 {
-		font-size: 3em;
-	}
-	.btn-custom {
-		margin: 10px 15px;
-	}
- }
-
-/* Medium devices (tablets, 768px and up)*/
-@media (min-width: 768px) and (max-width: 991.98px) {
-	h1 {
-		font-size: 4em;
-	}
-}
-
-/* Large devices (desktops, 992px and up)*/
-@media (min-width: 992px) and (max-width: 1199.98px) {
-	h1 {
-		font-size: 5em;
-	}
-}
-
-/* Extra large devices (large desktops, 1200px and up)*/
-@media (min-width: 1200px) {
-	h1 {
-		font-size: 6em;
-	}
-} 
+/* Responsive footer */
 @media screen and (max-width: 768px) {
     .conteudo-footer {
         grid-template-columns:repeat(1, 1fr);
