--- a/assets/styles.css
+++ b/assets/styles.css
@@ -57,6 +57,29 @@ h3 {
 	letter-spacing: 5px;
 	text-transform: uppercase;
 	margin-top: 40px;
+    border-radius: 20px;
+}
+
+/* Boxs da page-2 */
+.informations-boxes {
+    display: flex;
+	justify-content: space-around;
+	align-items: center;
+	width: 100%;
+	height: 75%;
+}
+
+.content-box1 {
+	background-color: black;
+	height: 90%;
+	width: 30%;
+	border-radius: 30px;
+}
+.content-box2 {
+	background-color: black;
+	height: 90%;
+	width: 30%;
+	border-radius: 30px;
 }
 
 .contact, .icon {
@@ -69,8 +92,7 @@ h3 {
 }
 
 footer {
-	background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
-	url(/assets/imagens/back-footer.jpg);
+    background-color: black;
 	width: 100%;
 }
 
@@ -83,7 +105,6 @@ footer {
 
 .endereco {
 	color: white;
-	left: 10px;
 	font-size: 12px;
 }
 
@@ -131,7 +152,7 @@ footer {
 /* Responsive footer */
 @media screen and (max-width: 768px) {
     .conteudo-footer {
-        grid-template-columns:repeat(1, 1fr);
+        grid-template-columns: repeat(1, 1fr);
         gap: 2rem;
     }
 }
