--- a/assets/styles.css
+++ b/assets/styles.css
@@ -69,18 +69,41 @@ body, html {
 	height: 75%;
 }
 
+.page-2-boxes {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	width: 100%;
+	height: 100%;
+}
+
 .content-box1 {
 	background-color: black;
-	height: 90%;
-	width: 30%;
+	height: 80%;
+	width: 70%;
 	border-radius: 30px;
+	margin-left: 20%;
+	margin-top: 10%;
 }
+.content-box1 > h3 {
+	color: yellow;
+	text-align: center;
+	margin-top: 7px;
+}
+
 .content-box2 {
-	background-color: black;
-	height: 90%;
-	width: 30%;
+	background-color: yellow;
+	height: 80%;
+	width: 70%;
 	border-radius: 30px;
+	margin-top: 10%;
 }
+
+.content-box2 > h3 {
+	color: black;
+	text-align: center;
+	margin-top: 7px;
+}
+
 
 .contact, .icon {
 	width: 65px;
@@ -127,6 +150,12 @@ footer {
 
 @media screen and (max-width: 768px) {
     #footer-content {
+        grid-template-columns:repeat(1, 1fr);
+        gap: 2rem;
+    }
+}
+@media screen and (max-width: 768px) {
+    .page-2-boxes {
         grid-template-columns:repeat(1, 1fr);
         gap: 2rem;
     }
