--- a/assets/styles.css
+++ b/assets/styles.css
@@ -35,9 +35,9 @@ p {
 }
 
 .box1 {
-	/*background-image: url(imagens/marketing-digital.webp);*/
-	background-color: #000000;
-	
+	background: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8)),
+	url(imagens/back-corp.jpg);
+	background-size: cover;
 }
 
 .box2 {
@@ -89,7 +89,7 @@ p {
     padding: 20px;
 }
 
-.description-marketing h2 {
+.description-marketing h1 {
     margin-top: 0;
 	color:#fbca1f;
 }
