--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,4 +1,5 @@
-body, html {
+body,
+html {
 	margin: 0;
 	font: 16px 'Lato', sans-serif;
 	color: #777;
@@ -8,19 +9,22 @@ body, html {
 
 .content {
 	color: #777;
-	background-color: #fff;
+	background-color: #000;
 	text-align: center;
 	padding: 50px 80px;
 	position: relative;
 }
 
-.content > h3 {
+.content>h3 {
 	margin-top: -30px;
+	color: #fff;
+	font-weight: bold;
+	font-size: 35px;
 }
 
-.content > p {
+.content>p {
 	margin-bottom: 50px;
-	color: #000;
+	color: #fff;
 	font-size: 17px;
 }
 
@@ -35,7 +39,8 @@ p {
 	color: white;
 }
 
-.contact, .icon {
+.contact,
+.icon {
 	width: 65px;
 	height: 65px;
 	position: fixed;
@@ -47,7 +52,8 @@ p {
 
 /*Efeito Parallax
 *****************/
-.box1, .box2 {
+.box1,
+.box2 {
 	position: relative;
 	height: 100%;
 	background-repeat: no-repeat;
@@ -58,7 +64,7 @@ p {
 
 .box1 {
 	background: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8)),
-	url(imagens/back-corp.jpg);
+		url(imagens/back-corp.jpg);
 	background-size: cover;
 }
 
@@ -76,7 +82,7 @@ p {
 }
 
 .content-title {
-	position:absolute;
+	position: absolute;
 	left: 0%;
 	top: 0%;
 	width: 100%;
@@ -93,40 +99,43 @@ p {
 	border-radius: 30px;
 	color: rgb(255, 255, 255);
 	font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-	
+
 }
 
 
 .container {
 	position: relative;
-    height: 100%; /* Ajuste conforme necessário */
-    flex: 1;
+	height: 100%;
+	/* Ajuste conforme necessário */
+	flex: 1;
 	display: flex;
 }
 
 .imagem-marketing {
-    position: absolute;
-    top: 55%;
-    right: 0;
-    transform: translateY(-50%);
+	position: absolute;
+	top: 55%;
+	right: 0;
+	transform: translateY(-50%);
 }
 
 .description-marketing {
 	position: absolute;
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    padding: 20px;
+	left: 0;
+	top: 50%;
+	transform: translateY(-50%);
+	padding: 20px;
 }
 
 .description-marketing h1 {
-    margin-top: 0;
-	color:#fbca1f;
+	margin-top: 0;
+	color: #fbca1f;
+	font-size: 50px;
 }
 
 .description-marketing p {
-    margin-bottom: 0;
-	color:#fff;
+	margin-bottom: 0;
+	color: #fff;
+	font-size: 25px;
 }
 
 
@@ -136,23 +145,48 @@ button {
 	padding: 0.6em 1.3em;
 	font-weight: 900;
 	font-size: 18px;
-	border: 3px solid black;
-	border-radius: 1em;
+	border: 0px solid black;
+	border-radius: 100px;
 	box-shadow: 0.1em 0.1em;
 	cursor: pointer;
-  }
-  
-  button:hover {
+}
+
+button:hover {
 	transform: translate(-0.05em, -0.05em);
 	box-shadow: 0.15em 0.15em;
-  }
-  
-  button:active {
+}
+
+button:active {
 	transform: translate(0.05em, 0.05em);
 	box-shadow: 0.05em 0.05em;
 }
 
-.button-box-1, .button-box-2 {
+/*botton main */
+
+.btn-main {
+	border-radius: 3px;
+	width: 120px;
+	font-size: 17px;
+}
+
+.btn-main:hover {
+	background-color: #ffa500;
+	transition: 0.3s;
+}
+
+.btn-main p {
+	font-size: 17px;
+	color: #000;
+}
+
+.btn-main p:hover {
+	font-size: 18px;
+}
+
+/*fim btn main */
+
+.button-box-1,
+.button-box-2 {
 	background: #fbca1f;
 	font-family: inherit;
 	padding: 0.6em 1.3em;
@@ -163,47 +197,116 @@ button {
 	box-shadow: 0.1em 0.1em;
 	cursor: pointer;
 	display: flex;
-  }
-  
-  .button-box-1, .button-box-2:hover {
+}
+
+.button-box-1,
+.button-box-2:hover {
 	transform: translate(-0.05em, -0.05em);
 	box-shadow: 0.15em 0.15em;
-  }
-  
-  .button-box-1, .button-box-2:active {
+}
+
+.button-box-1,
+.button-box-2:active {
 	transform: translate(0.05em, 0.05em);
 	box-shadow: 0.05em 0.05em;
 }
+
 /* Services Cards */
 
 .father-div-sc {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	grid-template-rows: repeat(2, 1fr);
-	grid-column-gap: 20px;
+	grid-column-gap: 0rem;
 	grid-row-gap: 30px;
-} 
+}
 
 .services-cards {
 	width: 100%;
 	height: 10rem;
-	background-color: transparent;
-	color: black;
+	color: #fff;
 	text-align: center;
 }
-.services-cards > p {
-	color: black;
+
+.services-cards>p {
+	color: #fff;
 	font-size: 30px;
 }
 
 .icons-sc {
-	width: 30%;
-	height: 40%;
+	color: #fff;
+	font-size: 40px;
+}
+
+/*Button style*/
+.more-button {
+	display: inline-block;
+	padding: 8px 24px;
+	border: 1px solid #4f4f4f;
+	border-radius: 4px;
+	transition: all 0.2s ease-in;
+	position: relative;
+	overflow: hidden;
+	font-size: 19px;
+	cursor: pointer;
+	color: black;
+	z-index: 1;
+	border: none;
+	box-shadow: none;
+}
+
+.more-button:before {
+	content: "";
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%) scaleY(1) scaleX(1.25);
+	top: 100%;
+	width: 140%;
+	height: 180%;
+	background-color: rgba(0, 0, 0, 0.05);
+	border-radius: 50%;
+	display: block;
+	transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+	z-index: -1;
+}
+
+.more-button:after {
+	content: "";
+	position: absolute;
+	left: 55%;
+	transform: translateX(-50%) scaleY(1) scaleX(1.45);
+	top: 180%;
+	width: 160%;
+	height: 190%;
+	background-color: #ffa500;
+	border-radius: 50%;
+	display: block;
+	transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+	z-index: -1;
+}
+
+.more-button:hover {
+	color: #000;
+	border: 1px solid #ffa500;
+	box-shadow: none;
+	transform: none;
+}
+
+.more-button:hover:before {
+	top: -35%;
+	background-color: #ffa500;
+	transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+
+.more-button:hover:after {
+	top: -45%;
+	background-color: #ffa500;
+	transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 }
 
 /* Boxs da page-2 */
 .informations-boxes {
-    display: flex;
+	display: flex;
 	justify-content: space-around;
 	align-items: center;
 	width: 100%;
@@ -229,7 +332,8 @@ button {
 	justify-content: space-around;
 	align-items: center;
 }
-.content-box1 > div > h3 {
+
+.content-box1>div>h3 {
 	color: #fbca1f;
 	text-align: center;
 	margin-top: 7px;
@@ -247,14 +351,15 @@ button {
 	align-items: center;
 }
 
-.content-box2 > div > h3 {
+.content-box2>div>h3 {
 	color: #fbca1f;
 	text-align: center;
 	margin-top: 7px;
 }
 
 
-.contact, .icon {
+.contact,
+.icon {
 	width: 65px;
 	height: 65px;
 	position: fixed;
@@ -262,28 +367,29 @@ button {
 	bottom: 30px;
 	display: inline-flex;
 }
+
 /* Footer content */
 footer {
-    width: 100%;
-    color: white;
+	width: 100%;
+	color: white;
 }
 
 #footer-content {
-    background-color: black;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;	
-    padding: 3rem 3.5rem;
-    width: 100%;
+	background-color: black;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-template-rows: 1fr;
+	grid-column-gap: 0px;
+	grid-row-gap: 0px;
+	padding: 3rem 3.5rem;
+	width: 100%;
 }
 
-#footer-localization > h3 {
+#footer-localization>h3 {
 	color: #fbca1f;
 }
 
-#footer-text > h3 {
+#footer-text>h3 {
 	color: #fbca1f;
 }
 
@@ -291,31 +397,31 @@ footer {
 	margin-right: 50px;
 }
 
-#footer-text > h1 { 
-    text-align: center;
+#footer-text>h1 {
+	text-align: center;
 }
 
 #footer-copyright {
-    display: flex;
-    justify-content: center;
-    background-color: black;
-    width: 100%;
-    font-size: 0.9rem;
-    padding: 1.5rem;
-    font-weight: 100;
+	display: flex;
+	justify-content: center;
+	background-color: black;
+	width: 100%;
+	font-size: 0.9rem;
+	padding: 1.5rem;
+	font-weight: 100;
 }
 
 /* Responsive adjustment */
 @media screen and (max-width: 768px) {
-    .page-2-boxes {
-        display: flex;
+	.page-2-boxes {
+		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-    }
+	}
 
 	.content-box1 {
-        margin-left: 0px;
+		margin-left: 0px;
 		width: 70%;
 		height: 100%;
 	}
@@ -326,30 +432,31 @@ footer {
 	}
 
 	#footer-content {
-        grid-template-columns:repeat(1, 2fr);
-        gap: 2rem;
-    }
+		grid-template-columns: repeat(1, 2fr);
+		gap: 2rem;
+	}
+
 	.father-div-sc {
 		grid-template-columns: repeat(1, 2fr);
 		gap: 300px, 30px;
 	}
 }
+
 @media screen and (max-width: 430px) {
-     .content-box1 {
+	.content-box1 {
 		margin-top: 250px;
 		width: auto;
 		height: auto;
 		margin-right: 40px;
 		margin-left: 40px;
-	 }
-	 .content-box2 {
+	}
+
+	.content-box2 {
 		width: auto;
 		height: auto;
 		margin-right: 40px;
 		margin-left: 40px;
 		margin-top: 40px;
 		margin-bottom: 40px;
-	 }
+	}
 }
-
-
