--- a/assets/styles.css
+++ b/assets/styles.css
@@ -303,6 +303,21 @@ button:active {
 	background-color: #ffa500;
 	transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 }
+/* Modal-window styles */
+dialog::backdrop {
+	background-color: rgb(0, 0, 0 / .3);
+}
+
+dialog {
+	border: none;
+	border-radius: .5rem;
+	box-shadow: 0 0 1em rgb(0, 0, 0 / .3);
+	width: 80%;
+}
+
+dialog > p {
+	color: black
+}
 
 /* Boxs da page-2 */
 .informations-boxes {
