--- a/assets/styles.css
+++ b/assets/styles.css
@@ -13,8 +13,10 @@ html {
 	padding: 110px 80px;
 	position: relative;
 	background: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.4)),
-		url(imagens/lamp.png);
+		url(imagens/blacklamp.png);
 	background-size: cover;
+	height: 100%;
+	width: 100%;
 }
 
 .content>h3 {
@@ -172,13 +174,17 @@ p {
 }
 
 .content-title {
-	position: absolute;
+	position: fixed;
 	left: 0%;
 	top: 0%;
 	width: 100%;
 	text-align: center;
 	background-color: #000000;
 	cursor: pointer;
+	z-index: 999;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .content-title span.title {
@@ -198,11 +204,8 @@ p {
 	height: 100%;
 	/* Ajuste conforme necessário */
 	flex: 1;
-	display: flex;
-	grid-template-columns: repeat(2, 1fr);
-	grid-template-rows: repeat(1, 1fr);
-	grid-column-gap: 0rem;
-	grid-row-gap: 30px;
+    display: flex;
+
 }
 
 .imagem-marketing {
@@ -312,17 +315,19 @@ button:active {
 	grid-template-columns: repeat(4, 1fr);
 	grid-template-rows: repeat(3, 1fr);
 	grid-column-gap: 0rem;
-	grid-row-gap: 30px;
+	grid-row-gap: 50px;
+	height: 500px;
+	width: 60%;
 }
 
 .services-cards {
-	width: 300px;
-	height: 10rem;
+	width: 150px;
+	height: 100%;
 	color: #fff;
 	text-align: left;
 }
 
-.services-cards>p {
+.services-cards > p {
 	color: #fff;
 	font-size: 25px;
 }
@@ -522,6 +527,10 @@ footer {
 
 /* Responsive adjustment */
 @media screen and (max-width: 768px) {
+	.content {
+		background: none;
+	}
+
 	.page-2-boxes {
 		display: flex;
 		flex-direction: column;
