--- a/assets/styles.css
+++ b/assets/styles.css
@@ -60,6 +60,7 @@ p {
 .box2 {
 	position: relative;
 	height: 100%;
+	width: 100%;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
@@ -69,8 +70,8 @@ p {
 
 /*imagem main*/
 .card-container {
-	width: 850px;
-	height: 500px;
+	width: 500px;
+	height: 350px;
 	position: relative;
 	border-radius: 10px;
 	display: flex;
@@ -204,7 +205,8 @@ p {
 
 .container {
 	position: relative;
-	height: 150%;
+	height: 100%;
+	width: 100%;
 	right: 14%;
 	/* Ajuste conforme necessário */
 	flex: 1;
@@ -221,9 +223,9 @@ p {
 
 .description-marketing {
 	width: 60%;
-	position: absolute;
+	position: relative;
 	left: 0px;
-	top: 50%;
+	top: 60%;
 	transform: translateY(-50%);
 	padding: 20px; 
 }
@@ -531,6 +533,8 @@ footer {
 @media screen and (max-width: 768px) {
 	.content {
 		background: none;
+		width: 100%;
+		height: 170%;
 	}
 
 	.page-2-boxes {
@@ -538,6 +542,8 @@ footer {
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
+		width: auto;
+		height: auto;
 	}
 
 	.content-box1 {
@@ -557,23 +563,35 @@ footer {
 	}
 
 	.father-div-sc {
-		grid-template-columns: repeat(3, 2fr);
-		gap: 300px, 30px;
+		grid-template-columns: repeat(2, 2fr);
+		grid-template-rows: repeat(4, 2fr);
+		gap: 150px, 70px;
+		left: 20px;
+		margin-left: 40px;
+	}
+	.services-cards {
+		width: 10%;
+		height: 10%;
 	}
 	.card-container {
 		display: none;
 		background: none;
 	}
 	.description-marketing {
-		left: 150px;
-		margin-bottom: -50px;
-		top: 450px;
+		width: 100%;
+		height: 70%;
+		margin-left: 40px;
+		margin-bottom: 100px;
+		top: 45%;
+	}
+	.box1 {
+		height: 110%;
 	}
 }
 
 @media screen and (max-width: 430px) {
 	.content-box1 {
-		margin-top: 250px;
+		margin-top: 100px;
 		width: auto;
 		height: auto;
 		margin-right: 40px;
@@ -587,5 +605,11 @@ footer {
 		margin-left: 40px;
 		margin-top: 40px;
 		margin-bottom: 40px;
+	}
+	.content {
+		height: 175%;
+	}
+	.father-div-sc {
+		margin-left: -20px;
 	}
 }
